EESimulator rework, Environment Rework (basic-sim parser), Vehicle Rework (WIP)